--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistroActivity"></activity>
+        <activity android:name=".PerfilUsuarioActivity"></activity>
+        <activity android:name=".RegistroActivity" />
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".SplashActivity"
