Se agrega Mapa al MapaFragment pero con un error. Corregirlo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,4 +54,9 @@
             android:theme="@style/AppTheme" />
     </application>
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"
+        />
+
 </manifest>
