Implementacion de confirmacion de salida de app con flecha del dispositivo movil.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginAdminActivity"></activity>
-        <activity android:name=".LoginGuardiaActivity" />
-        <activity android:name=".Choose_User" />
-        <activity android:name=".Reportar_Denuncia" />
+        <activity android:name=".LoginAdminActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".LoginGuardiaActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Choose_User"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Reportar_Denuncia"
+            android:screenOrientation="portrait"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -41,9 +45,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBbGSt2rtm0OSRIMXeXWCsUYZHpAxZVnII" />
 
-        <activity android:name=".DashboardActivity" />
-        <activity android:name=".RegistroActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".DashboardActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".RegistroActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashActivity">
