Se implemento las opciones del guardia, paraver la lista de delitos y escoger entre uno de ellos y visualizarlo en el mapa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Guardia_Pantalla"></activity>
+        <activity android:name=".MapaDelitoActivity"></activity>
+        <activity android:name=".ListaDenuncias" />
+        <activity android:name=".Guardia_Pantalla" />
         <activity android:name=".Registra_Admin" />
         <activity android:name=".Registro_Guardia" />
         <activity android:name=".Choose_Registro" />
